# vkusny_marshruty

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  0f3df8e79fd7_update_available_dates_type_to_array.py  875e638d9791_update_tour_model_with_new_fields.py  b5644fd168c9_remove_username_unique_constraint.py  c2500936315a_add_guest_fields_to_travel_requests.py
app/: admin.py  main.py
app/api/: __init__.py
app/api/endpoints/: auth.py  requests.py  tours.py
app/bot/: bot.py  config.py  notifications.py  run.py
app/core/: config.py  security.py
app/db/: database.py  init_db.py  models.py  seed.py
app/models/: models.py
app/schemas/: schemas.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  tours.ts
frontend/src/components/: ErrorAlert.tsx  ErrorBoundary.tsx  Footer.tsx  Layout.tsx  LoadingSpinner.tsx  Navbar.tsx  ProtectedRoute.tsx  SuccessAlert.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Booking.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx  TourDetails.tsx  Tours.tsx
frontend/src/services/: api.ts
frontend/src/theme/: theme.ts
