[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vkusny_marshruty"
version = "0.1.0"
authors = [
  { name="Max" },
]
description = "Vkusny Marshruty - Tour Booking Application"
readme = "README.md"
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = [
  "."
] 